app/css/styles.scss
/* ... */
.customer-list {
  list-style: none;
  padding: 0;
  max-width: 1000px;
  margin: 0 auto;
  li {
    display: inline-block;
    width: 90px;
    margin: 20px;
    vertical-align: top;
    :before{
      content: "";
    }
    img {
      max-width: 100%;
      border-radius: 10px;
    }
    transition: all 0.25s;
    :hover{
      transform: scale(1.2);
    }
  }
}

.full-width-breakout {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

// Style guide

.swatch-list{
  margin: 2em 0;
  li {
    margin: 2em 0;
    display: flex;
    align-items: flex-start;
    &:before {
      display: none;
    }
    .swatch {
      display: inline-block;
      width: 3em;
      height: 3em;
      border-radius: 50%;
      margin: 0 1em 0 0;
      flex-shrink: 0;
      &.bordered{
        box-shadow: inset 0 0 0px 1px black;
      }
    }
    strong {
      margin-right: 1em;
      text-transform: uppercase;
      font-family: 'Courier New', Courier, monospace;
    }
  }
}

.logo-collection {
  display: flex;
  max-width: 600px;
  margin: 0 auto;
  .logo-container {
    max-width: 200px;
    margin: 0 auto;
    p {
      text-align: center;
    }
  }
}

.breakout-table {
  overflow-x: auto;
  table{
    width: auto;
    text-align: left;
    vertical-align: top;
    border-collapse: collapse;
    td:last-child, th:last-child {
      border-right: none;
    }

    tr:last-child td {
      border-bottom: none;
    }
    td:first-child, th:first-child {
      border-left: none;
    }
    th, td {
      vertical-align: top;
      border: 1px solid $text;
      padding: 1em;
    }
    th {
      border-top: none;
    }
  }
  @media screen and (min-width: $column-width) {
    overflow-x: visible;
    table {
      margin-left: calc(-90vw / 2 + 760px / 2);
      margin-right: calc(-90vw / 2 + 760px / 2);
    }
  }
}

.features {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  .feature {
    min-width: 300px;
    max-width: 40%;
    margin: 0 1em;
    svg {
      width: 40px;
      position: absolute;
      margin-top: 1.9em;
      fill: $blue-primary;
    }
    h3 {
      font-size: 1.75em;
      text-align: left;
      margin-left: 50px;
    }
    p {
      margin-left: 50px;
    }
  }
}

.image-header{
  margin: 5rem auto 3rem;
  max-width: 80%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  position: relative;
  padding: 0;
  min-height: 500px;
  justify-content: center;
  align-items: center;
  text-align: center;
  h2 {
    width: 100%;
    text-align: center;
    padding-bottom: 0;
    margin-bottom: 0;
    &:after {
      display: none;
    }
  }
  p {
    width: 100%;
    text-align: center;
  }
  button {
    width: auto;
    background: $blue-primary;
    color: $white;
    letter-spacing: 1px;
    font-weight: normal;
    border: none;
    font-size: 1.25rem;
  }
  .img {
    width: 100%;
    height: 100%;
    position: relative;
    right: 0;
    top: 0;
    overflow: hidden;
    border: 1px solid #f5f5f5;
    border-radius: 10px;
    padding: 0.5em;
    border-top-width: 20px;
    box-shadow: 0 0 20px rgba(50,50,50,.1);
    background: #fff;
    margin-top: 2rem;
    img {
      max-height: 100%;
      width: 100%;
    }
  }
}

@media screen and (min-width: 400px) {
  html{
    font-size: 20px;
  }
}

// Flip to wide layout and non-mobile nav
@media screen and (min-width: $column-width) {
  a:not([href]) {
    margin-bottom: 2rem;
  }
  body.no-scroll {
    overflow: visible;
  }
  html{
    font-size: 22px;
  }
  a.menu-button {
    display: none;
  }
  nav.header {
    position: fixed;
    height: 2.5rem;
    background-color: $white;
    align-items: center;
    box-shadow: 0 0 10px 5px hsla(0, 0%, 50%, 0.1);
    ul{
      display: flex;
      font-size: 0.6rem;
      list-style: none;
      margin: 0;
      padding: 0;
      text-transform: uppercase;
      font-weight: bold;
      font-family: $fonts;
      letter-spacing: 0.1em;
      //transition: none;
      transform: translateX(0);
      width: 90%;
      max-width: 760px;
      margin: 0 auto;
      li {
        width: auto;
        margin: 0 1em 0em 0;
        &.account {
          position: absolute;
          right: 0;
        }
      }
    }
  }
  body.index nav.header ul {
    max-width: none;
  }
  header span{
    font-size: 1rem;
  }
  .double-flex{
    margin: 3em auto 3em;
  }
  .double-flex section{
    width: 50%;
  }
  .double-flex .social-proof{
    width: 35%;
  }
  .double-flex .they-really-seem-to-like-us{
    width: 65%;
    padding: 0.5em 1em;
  }
  section{
    &.split-item-top,
    &.split-item-bottom{
      margin: 1em 0;
      padding: 0.5em 1em;
      ul {
        margin: inherit;
      }
    }
  }
  .oss-users li a{
    font-size: 0.75em;
  }
  .tweets {
    font-size: 1.25rem;
    line-height: 1.6;
  }
  .image-header {
    align-items: flex-start;
    text-align: left;
    max-height: 500px;
    min-height: 46vw;
    h2, p {
      width: 30%;
      text-align: left;
    }
    button {
      width: auto;
    }
    .img {
      width: 60%;
      margin-top: 0;
    }
  }
}
/* ... */

